--- a/freelancer/css/bootstrap.css
+++ b/freelancer/css/bootstrap.css
@@ -942,7 +942,7 @@ pre code {
   .col-sm-9 {
     width: 75%;
   }
-  .col-sm-8 {
+  .14:30 2014/6/27 {
     width: 66.66666667%;
   }
   .col-sm-7 {
